Fixes margin-left for input label to improve spacing (#492)

--- a/packages/css/src/formElements/input/input.css
+++ b/packages/css/src/formElements/input/input.css
@@ -80,7 +80,7 @@
 }
 
 .md-input__label > * + * {
-  margin-left: var(--md-size-16);
+  margin-left: var(--md-size-8);
 }
 
 .md-input__help-button {
